--- a/main.html
+++ b/main.html
@@ -7,9 +7,9 @@
 <style>
  
 #nav ul li {
- position: relative;               /* Где находится элемент */
- border-bottom:1px solid #ccc;     /* Разделительная рамка  */
- border-right:2px  solid #ccc;	   /* Разделительная рамка  */	
+ position: relative;               /* ГѓГ¤ГҐ Г­Г ГµГ®Г¤ГЁГІГ±Гї ГЅГ«ГҐГ¬ГҐГ­ГІ */
+ border-bottom:1px solid #ccc;     /* ГђГ Г§Г¤ГҐГ«ГЁГІГҐГ«ГјГ­Г Гї Г°Г Г¬ГЄГ   */
+ border-right:2px  solid #ccc;	   /* ГђГ Г§Г¤ГҐГ«ГЁГІГҐГ«ГјГ­Г Гї Г°Г Г¬ГЄГ   */	
 }
 
 #nav ul li a {
@@ -81,7 +81,7 @@ opacity: 1;
  <table width=800 border=1 cellspacing=0 cellpadding=5 bgcolor="#E6E6FA" color="#000000" style=filter:alpha(opacity=30)>
  <tr>
  <td colspan="2" style="font-size: 40pt">
- Летопись Краннога
+ Г‹ГҐГІГ®ГЇГЁГ±Гј ГЉГ°Г Г­Г­Г®ГЈГ 
  </td>
  <tr>
 
@@ -91,77 +91,77 @@ opacity: 1;
 
 <div id="nav">
 <ul>
-<li><a href="main.html">Главная</a></li>
-<li><a href="#">Зима</a>
+<li><a href="main.html">ГѓГ«Г ГўГ­Г Гї</a></li>
+<li><a href="#">Г‡ГЁГ¬Г </a>
 <ul>
- <li><a href="I.html">I триместр</a></li>
- <li><a href="IV.html">IV триместр</a></li>
- <li><a href="VII.html">VII триместр</a></li>
- <li><a href="X.html">X триместр</a></li>
+ <li><a href="I.html">I ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="IV.html">IV ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="VII.html">VII ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="X.html">X ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
 </ul>
-<li><a href="#">Весна</a>
+<li><a href="#">Г‚ГҐГ±Г­Г </a>
 <ul>
- <li><a href="II.html">II триместр</a></li>
- <li><a href="V.html">V триместр</a></li>
- <li><a href="VIII.html">VIII триместр</a></li>
+ <li><a href="II.html">II ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="V.html">V ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="VIII.html">VIII ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
 </ul>
-<li><a href="#">Лето</a>
+<li><a href="#">Г‹ГҐГІГ®</a>
 <ul>
- <li><a href="leto_2012.html">Лето 2012</a></li>
- <li><a href="leto_2013.html">Лето 2013</a></li>
- <li><a href="leto_2014.html">Лето 2014</a></li>
+ <li><a href="leto_2012.html">Г‹ГҐГІГ® 2012</a></li>
+ <li><a href="leto_2013.html">Г‹ГҐГІГ® 2013</a></li>
+ <li><a href="leto_2014.html">Г‹ГҐГІГ® 2014</a></li>
 </ul>
-<li><a href="#">Осень</a>
+<li><a href="#">ГЋГ±ГҐГ­Гј</a>
 <ul>
- <li><a href="III.html">III триместр</a></li>
- <li><a href="VI.html">VI триместр</a></li>
- <li><a href="IX.html">IX триместр</a></li>
+ <li><a href="III.html">III ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="VI.html">VI ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="IX.html">IX ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
 </ul>
 </li>
-<li><a href="#">Победы и достижения</a>
+<li><a href="#">ГЏГ®ГЎГҐГ¤Г» ГЁ Г¤Г®Г±ГІГЁГ¦ГҐГ­ГЁГї</a>
 <ul>
-<li><a href="awards_5.html">V триместр</a></li>
-<li><a href="awards_6.html">VI триместр</a></li>
-<li><a href="awards_7.html">VII триместр</a></li>
-<li><a href="awards_8.html">VIII триместр</a></li>
-<li><a href="awards_13.html">XIII триместр</a></li>
- <li><a href="awards_14.html">XIV триместр</a></li>
- <li><a href="awards_14-15.html">Лето 2016</a></li>
- <li><a href="awards_15.html">XV триместр</a></li>
- <li><a href="awards_16.html">XVI триместр</a></li>
- <li><a href="awards_17.html">XVII триместр</a></li>
-  <li><a href="awards_18.html">XVIII триместр</a></li>
-   <li><a href="awards_19.html">XIX триместр</a></li>
-    <li><a href="awards_20.html">XX триместр</a></li>
+<li><a href="awards_5.html">V ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+<li><a href="awards_6.html">VI ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+<li><a href="awards_7.html">VII ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+<li><a href="awards_8.html">VIII ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+<li><a href="awards_13.html">XIII ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="awards_14.html">XIV ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="awards_14-15.html">Г‹ГҐГІГ® 2016</a></li>
+ <li><a href="awards_15.html">XV ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="awards_16.html">XVI ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+ <li><a href="awards_17.html">XVII ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+  <li><a href="awards_18.html">XVIII ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+   <li><a href="awards_19.html">XIX ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
+    <li><a href="awards_20.html">XX ГІГ°ГЁГ¬ГҐГ±ГІГ°</a></li>
 </ul>
 </li>
 <li><a href="holidays.html">&#1055;&#1088;&#1072;&#1079;&#1076;&#1085;&#1080;&#1082;&#1080; &#1080; &#1090;&#1088;&#1072;&#1076;&#1080;&#1094;&#1080;&#1080;</a>
 </li>
-<li><a href="net.html">Тёмные личности</a> </li>
-<li><a href="art.html">Творчество</a> </li>
-<li><a href="help.html">Я хочу помочь!</a></li>
+<li><a href="net.html">Г’ВёГ¬Г­Г»ГҐ Г«ГЁГ·Г­Г®Г±ГІГЁ</a> </li>
+<li><a href="art.html">Г’ГўГ®Г°Г·ГҐГ±ГІГўГ®</a> </li>
+<li><a href="help.html">Гџ ГµГ®Г·Гі ГЇГ®Г¬Г®Г·Гј!</a></li>
 </div>
 
  </td>
   <td  style="padding:0px 30px;">
  <font color="#000000 font face="Times New Roman" style="font-size: 13pt"> 
 
-<p align="justify" style="color:#000000"> Много славных дней, чудесных праздничных вечеров, невероятных ночей, наполненных сосредоточенным шелестом пергаментов и скрипами перьев, видел Кранног.</br>
-Гостиная Дома помнит о том, как в неё когда-то вошёл самый первый глава, дружески хлопнув знаменитый кранножский Дуб по тёплой коре. Как ему улыбнулось озеро, подмигивая солнечными бликами на воде, как вышли из леса и воды, прилетели с небес волшебные помощники, которые стали хранителями Дома.</br></br>
+<p align="justify" style="color:#000000"> ГЊГ­Г®ГЈГ® Г±Г«Г ГўГ­Г»Гµ Г¤Г­ГҐГ©, Г·ГіГ¤ГҐГ±Г­Г»Гµ ГЇГ°Г Г§Г¤Г­ГЁГ·Г­Г»Гµ ГўГҐГ·ГҐГ°Г®Гў, Г­ГҐГўГҐГ°Г®ГїГІГ­Г»Гµ Г­Г®Г·ГҐГ©, Г­Г ГЇГ®Г«Г­ГҐГ­Г­Г»Гµ Г±Г®Г±Г°ГҐГ¤Г®ГІГ®Г·ГҐГ­Г­Г»Г¬ ГёГҐГ«ГҐГ±ГІГ®Г¬ ГЇГҐГ°ГЈГ Г¬ГҐГ­ГІГ®Гў ГЁ Г±ГЄГ°ГЁГЇГ Г¬ГЁ ГЇГҐГ°ГјГҐГў, ГўГЁГ¤ГҐГ« ГЉГ°Г Г­Г­Г®ГЈ.</br>
+ГѓГ®Г±ГІГЁГ­Г Гї Г„Г®Г¬Г  ГЇГ®Г¬Г­ГЁГІ Г® ГІГ®Г¬, ГЄГ ГЄ Гў Г­ГҐВё ГЄГ®ГЈГ¤Г -ГІГ® ГўГ®ГёВёГ« Г±Г Г¬Г»Г© ГЇГҐГ°ГўГ»Г© ГЈГ«Г ГўГ , Г¤Г°ГіГ¦ГҐГ±ГЄГЁ ГµГ«Г®ГЇГ­ГіГў Г§Г­Г Г¬ГҐГ­ГЁГІГ»Г© ГЄГ°Г Г­Г­Г®Г¦Г±ГЄГЁГ© Г„ГіГЎ ГЇГ® ГІВёГЇГ«Г®Г© ГЄГ®Г°ГҐ. ГЉГ ГЄ ГҐГ¬Гі ГіГ«Г»ГЎГ­ГіГ«Г®Г±Гј Г®Г§ГҐГ°Г®, ГЇГ®Г¤Г¬ГЁГЈГЁГўГ Гї Г±Г®Г«Г­ГҐГ·Г­Г»Г¬ГЁ ГЎГ«ГЁГЄГ Г¬ГЁ Г­Г  ГўГ®Г¤ГҐ, ГЄГ ГЄ ГўГ»ГёГ«ГЁ ГЁГ§ Г«ГҐГ±Г  ГЁ ГўГ®Г¤Г», ГЇГ°ГЁГ«ГҐГІГҐГ«ГЁ Г± Г­ГҐГЎГҐГ± ГўГ®Г«ГёГҐГЎГ­Г»ГҐ ГЇГ®Г¬Г®Г№Г­ГЁГЄГЁ, ГЄГ®ГІГ®Г°Г»ГҐ Г±ГІГ Г«ГЁ ГµГ°Г Г­ГЁГІГҐГ«ГїГ¬ГЁ Г„Г®Г¬Г .</br></br>
 
-Шли часы, складываясь в триместры, гремели аплодисменты в Бальном зале, окрашивались в зелёный с фиолетовым флаги на Главной площади Аргемоны, пропадал и снова появлялся Кубок в нише гостиной.</br>
-Туда и обратно по лесным тропинкам пробегали сосредоточенные ученики и студенты, преследуемые по пятам активными дожиками и префектами. </br></br>
+ГГ«ГЁ Г·Г Г±Г», Г±ГЄГ«Г Г¤Г»ГўГ ГїГ±Гј Гў ГІГ°ГЁГ¬ГҐГ±ГІГ°Г», ГЈГ°ГҐГ¬ГҐГ«ГЁ Г ГЇГ«Г®Г¤ГЁГ±Г¬ГҐГ­ГІГ» Гў ГЃГ Г«ГјГ­Г®Г¬ Г§Г Г«ГҐ, Г®ГЄГ°Г ГёГЁГўГ Г«ГЁГ±Гј Гў Г§ГҐГ«ВёГ­Г»Г© Г± ГґГЁГ®Г«ГҐГІГ®ГўГ»Г¬ ГґГ«Г ГЈГЁ Г­Г  ГѓГ«Г ГўГ­Г®Г© ГЇГ«Г®Г№Г Г¤ГЁ ГЂГ°ГЈГҐГ¬Г®Г­Г», ГЇГ°Г®ГЇГ Г¤Г Г« ГЁ Г±Г­Г®ГўГ  ГЇГ®ГїГўГ«ГїГ«Г±Гї ГЉГіГЎГ®ГЄ Гў Г­ГЁГёГҐ ГЈГ®Г±ГІГЁГ­Г®Г©.</br>
+Г’ГіГ¤Г  ГЁ Г®ГЎГ°Г ГІГ­Г® ГЇГ® Г«ГҐГ±Г­Г»Г¬ ГІГ°Г®ГЇГЁГ­ГЄГ Г¬ ГЇГ°Г®ГЎГҐГЈГ Г«ГЁ Г±Г®Г±Г°ГҐГ¤Г®ГІГ®Г·ГҐГ­Г­Г»ГҐ ГіГ·ГҐГ­ГЁГЄГЁ ГЁ Г±ГІГіГ¤ГҐГ­ГІГ», ГЇГ°ГҐГ±Г«ГҐГ¤ГіГҐГ¬Г»ГҐ ГЇГ® ГЇГїГІГ Г¬ Г ГЄГІГЁГўГ­Г»Г¬ГЁ Г¤Г®Г¦ГЁГЄГ Г¬ГЁ ГЁ ГЇГ°ГҐГґГҐГЄГІГ Г¬ГЁ. </br></br>
 
-Дом запоминал каждый вздох своих учащихся, каждый радостный крик получивших жемчуг, каждый раздосадованный стон увидевших "9" в шкале отметок за сданный РИСК, каждую шалость и каждый маленький подвиг.</br>
-А потом под полной луной под заинтересованными взглядами Кита шептал о них Главе, которая улыбаясь, записывала истории в большую зелёную книгу, на форзаце которой вились золотые буквы, складывающиеся в слово "Летопись".</br></br>
+Г„Г®Г¬ Г§Г ГЇГ®Г¬ГЁГ­Г Г« ГЄГ Г¦Г¤Г»Г© ГўГ§Г¤Г®Гµ Г±ГўГ®ГЁГµ ГіГ·Г Г№ГЁГµГ±Гї, ГЄГ Г¦Г¤Г»Г© Г°Г Г¤Г®Г±ГІГ­Г»Г© ГЄГ°ГЁГЄ ГЇГ®Г«ГіГ·ГЁГўГёГЁГµ Г¦ГҐГ¬Г·ГіГЈ, ГЄГ Г¦Г¤Г»Г© Г°Г Г§Г¤Г®Г±Г Г¤Г®ГўГ Г­Г­Г»Г© Г±ГІГ®Г­ ГіГўГЁГ¤ГҐГўГёГЁГµ "9" Гў ГёГЄГ Г«ГҐ Г®ГІГ¬ГҐГІГ®ГЄ Г§Г  Г±Г¤Г Г­Г­Г»Г© ГђГ€Г‘ГЉ, ГЄГ Г¦Г¤ГіГѕ ГёГ Г«Г®Г±ГІГј ГЁ ГЄГ Г¦Г¤Г»Г© Г¬Г Г«ГҐГ­ГјГЄГЁГ© ГЇГ®Г¤ГўГЁГЈ.</br>
+ГЂ ГЇГ®ГІГ®Г¬ ГЇГ®Г¤ ГЇГ®Г«Г­Г®Г© Г«ГіГ­Г®Г© ГЇГ®Г¤ Г§Г ГЁГ­ГІГҐГ°ГҐГ±Г®ГўГ Г­Г­Г»Г¬ГЁ ГўГ§ГЈГ«ГїГ¤Г Г¬ГЁ ГЉГЁГІГ  ГёГҐГЇГІГ Г« Г® Г­ГЁГµ ГѓГ«Г ГўГҐ, ГЄГ®ГІГ®Г°Г Гї ГіГ«Г»ГЎГ ГїГ±Гј, Г§Г ГЇГЁГ±Г»ГўГ Г«Г  ГЁГ±ГІГ®Г°ГЁГЁ Гў ГЎГ®Г«ГјГёГіГѕ Г§ГҐГ«ВёГ­ГіГѕ ГЄГ­ГЁГЈГі, Г­Г  ГґГ®Г°Г§Г Г¶ГҐ ГЄГ®ГІГ®Г°Г®Г© ГўГЁГ«ГЁГ±Гј Г§Г®Г«Г®ГІГ»ГҐ ГЎГіГЄГўГ», Г±ГЄГ«Г Г¤Г»ГўГ ГѕГ№ГЁГҐГ±Гї Гў Г±Г«Г®ГўГ® "Г‹ГҐГІГ®ГЇГЁГ±Гј".</br></br>
 
-Эта книга сейчас перед вами.</br>
-Открывайте страницы осторожно! Ведь в них живёт история Краннога, готовая опуститься в ваши протянутые руки.</p>
+ГќГІГ  ГЄГ­ГЁГЈГ  Г±ГҐГ©Г·Г Г± ГЇГҐГ°ГҐГ¤ ГўГ Г¬ГЁ.</br>
+ГЋГІГЄГ°Г»ГўГ Г©ГІГҐ Г±ГІГ°Г Г­ГЁГ¶Г» Г®Г±ГІГ®Г°Г®Г¦Г­Г®! Г‚ГҐГ¤Гј Гў Г­ГЁГµ Г¦ГЁГўВёГІ ГЁГ±ГІГ®Г°ГЁГї ГЉГ°Г Г­Г­Г®ГЈГ , ГЈГ®ГІГ®ГўГ Гї Г®ГЇГіГ±ГІГЁГІГјГ±Гї Гў ГўГ ГёГЁ ГЇГ°Г®ГІГїГ­ГіГІГ»ГҐ Г°ГіГЄГЁ.</p>
 
 </td>
  <tr> 
  <td colspan="2" style="font-size: 10pt">
- (с) мы строгаем ;)
+ (Г±) Г¬Г» Г±ГІГ°Г®ГЈГ ГҐГ¬ ;)
  </td>
 
 <div><a href="#top" class="idTop"/></a></div>
